--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "@hono/zod-validator": "^0.3.0",
+    "hono": "^4.6.3",
+    "zod": "^3.23.8"
   }
 }
