--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun server/index.ts",
+    "start": "bun run --cwd ./client build && bun server/index.ts",
     "dev": "bun --watch server/index.ts"
   },
   "devDependencies": {
