--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-router": "^1.62.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tanstack/router-devtools": "^1.62.1",
+    "@tanstack/router-plugin": "^1.62.0",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
