--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "bunx --bun vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
