--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.3.0",
+    "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "hono": "^4.6.3",
     "zod": "^3.23.8"
   }
