--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "type": "module",
   "scripts": {
     "start": "bun run --cwd ./client bun i && bun server/index.ts",
-    "dev": "bun --watch server/index.ts"
+    "dev": "bun --watch server/index.ts",
+    "dev:both": "bun --watch --filter '*' dev"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.26.2"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.3.0",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "drizzle-orm": "^0.35.3",
     "hono": "^4.6.3",
+    "postgres": "^3.4.4",
     "zod": "^3.23.8"
   }
 }
