--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/zod-validator": "^0.3.0",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "drizzle-orm": "^0.35.3",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.3",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
